Logs/nanotec_yes.out
  File "/Users/christerolsen/nanotec_yes_to_all.sh", line 2
    END=$((SECONDS + 43200))
        ^
SyntaxError: invalid syntax
🔬 NanoTec overvåkning startet: Sun Jul 27 05:02:24 CEST 2025
✅ NanoTec kjørte ferdig: Sun Jul 27 05:02:24 CEST 2025
